# c-demo

./: .gitignore  README.en.md  README.md
book/c-programming-3/: CMakeLists.txt  README.md
book/c-programming-3/chapter01/: CMakeLists.txt  HelloWorld.c  page-5-demo1.3.c
book/c-programming-3/chapter03/: CMakeLists.txt  page-44-demo3.3.c  page-58.c  page-64.c  page-65.c
book/c-programming-3/chapter04/: CMakeLists.txt  page-72.c  page-73-putchar.c  page-74-getchar.c
book/c-programming-3/chapter06/: CMakeLists.txt  page-113-goto.c
book/c-programming-3/chapter07/: CMakeLists.txt  page-131-array.c
book/c-programming-3/chapter08/: CMakeLists.txt  page-155-function.c  page-171-recursive-function.c  page-182-arrays-parameter.c  page-191-static-variable.c  page-192-register-variable.c  page-193-extern-variable.c  page-194-extern-variable-file1.c  page-194-extern-variable-file2.c  page-199-io-function.c  page-200-function-file1.c  page-200-function-file2.c  page-200-function-file3.c  page-200-function-file4.c
book/c-programming-3/chapter09/: CMakeLists.txt  page-205-macro-definition-parameter.c  page-205-macro-definition.c  page-212-format.h  page-212-macro-definition-include.c  page-216-conditional-compilation.c
book/c-programming-3/chapter10/: CMakeLists.txt  page-223-pointer-variable.c  page-224-pointer-apply.c  page-225-pointer-parameter.c  page-231-array-poointer.c  page-237-array-inverted-order.c  page-246-multidimensional-arrays.c  page-251-char-pointer.c  page-253-char-array-pointer.c  page-254-char-pointer-parameter.c  page-260-function-pointer.c  (+5 more)
(+22 files in other folders)
